# camkes-vm-examples

./: .licenseignore  .stylefilter  CMakeLists.txt  Findcamkes-arm-vm.cmake  Kconfig  README.md  arm_vm_helpers.cmake  easy-settings.cmake  settings.cmake
.reuse/: dep5
apps/Arm/odroid_vm/: CMakeLists.txt  settings.cmake  vm_odroid.camkes
apps/Arm/odroid_vm/include/: can_inf.h  common.h  spi_inf.h  utils.h
apps/Arm/odroid_vm/interfaces/: can.idl4  clk.idl4  gpio.idl4  pilot.idl4  pwm.idl4  spi.idl4  timer.idl4  uart.idl4
apps/Arm/vm_cross_connector/: CMakeLists.txt  settings.cmake  vm_cross_connector.camkes
apps/Arm/vm_cross_connector/exynos5422/: devices.camkes
apps/Arm/vm_cross_connector/qemu-arm-virt/: devices.camkes
apps/Arm/vm_cross_connector/rpi4/: devices.camkes
apps/Arm/vm_cross_connector/src/: cross_vm_connections.c
apps/Arm/vm_introspect/: CMakeLists.txt  settings.cmake  vm_introspect.camkes
apps/Arm/vm_introspect/component/: introspect_component.c
apps/Arm/vm_introspect/exynos5422/: devices.camkes
apps/Arm/vm_introspect/qemu-arm-virt/: devices.camkes
apps/Arm/vm_introspect/src/: cross_vm_connection.c  init_dataport_ram.c
apps/Arm/vm_minimal/: CMakeLists.txt  settings.cmake  vm_minimal.camkes
apps/Arm/vm_minimal/exynos5422/: devices.camkes
apps/Arm/vm_minimal/imx8mq-evk/: devices.camkes
apps/Arm/vm_minimal/odroidc2/: devices.camkes
apps/Arm/vm_minimal/qemu-arm-virt/: devices.camkes
apps/Arm/vm_minimal/rk3288/: devices.camkes
apps/Arm/vm_minimal/rpi4/: devices.camkes
apps/Arm/vm_minimal/tk1/: devices.camkes
apps/Arm/vm_minimal/tx1/: devices.camkes
apps/Arm/vm_minimal/tx2/: devices.camkes
apps/Arm/vm_multi/: CMakeLists.txt  settings.cmake  vm_multi.camkes
apps/Arm/vm_multi/dropbear/: authorized_keys  dropbear_rsa_host_key  dropbear_rsa_host_key.pub  dropbear_rsa_host_key.pub_old  dropbearmulti  etc-hosts  fingerprint.txt  id_rsa  id_rsa.pub  ssh
apps/Arm/vm_multi/exynos5422/: devices.camkes
apps/Arm/vm_multi/network/: boot.txt  build-router.sh  config.yml  connect-vlans  example-wg-priv.txt  generate-client-vlan  remote-etc-hosts  wireguard-interface.sh
apps/Arm/vm_multi/notes/: commands.sh  vlan-testing.sh
apps/Arm/vm_multi/overlay_files/: S44StartIpAllocator  S45SetupInfra  inittab_hvc0  vm0_bridge_setup.sh  vm0_bridge_setup_ovs.sh  vm0_bridge_setup_ovs_vlan.sh  vm0_bridge_setup_vanilla_works.sh  vm_client_net_setup.sh  vm_client_net_setup_ovs.sh  vm_client_net_setup_vanilla_works.sh  vm_client_net_setup_vlan.sh  wg-privkey
apps/Arm/vm_multi/qemu-arm-virt/: devices.camkes
apps/Arm/vm_multi/rpi4/: devices.camkes
apps/Arm/vm_multi/scripts/: .profile  StartDropbear  address-setup.sh  hosts  local-wireguard.sh  nat-firewalld.sh  nat-iptables.sh  nat.sh  run-vm-multi.sh  vlan.sh
apps/Arm/vm_serial_server/: CMakeLists.txt  settings.cmake  vm_serial_server.camkes
apps/Arm/vm_serial_server/exynos5422/: devices.camkes
apps/Arm/vm_virtio_net/: CMakeLists.txt  README.md  settings.cmake  vm_echo_ping.camkes  vm_virtio_net.camkes
apps/Arm/vm_virtio_net/exynos5422/: devices.camkes
apps/Arm/vm_virtio_net/qemu-arm-virt/: devices.camkes
apps/Arm/vm_virtio_net/tx2/: devices.camkes
apps/odroid_vm/: CMakeLists.txt  settings.cmake  vm_odroid.camkes
apps/odroid_vm/components/can/: CMakeLists.txt
apps/odroid_vm/components/clk/: CMakeLists.txt
apps/odroid_vm/components/gpio/: CMakeLists.txt
apps/odroid_vm/components/helloworld/: CMakeLists.txt  helloworld.camkes
apps/odroid_vm/components/pwm/: pwm.camkes
apps/odroid_vm/components/timer/: CMakeLists.txt
apps/odroid_vm/include/: common.h  utils.h
apps/odroid_vm/interfaces/: uart.idl4
apps/vm/: CMakeLists.txt  Kbuild  Kconfig  Makefile  vm.camkes  vm_common.camkes  vm_odroid.camkes  vm_tk1.camkes
apps/vm/components/VM/: VM.camkes  VM.mk  vm_common.camkes
apps/vm/components/can/: CMakeLists.txt  can.camkes
apps/vm/components/gpio/: CMakeLists.txt  gpio.camkes
apps/vm/components/helloworld/: helloworld.camkes
apps/vm/components/pilot/: CMakeLists.txt  pilot.camkes
apps/vm/components/pwm/: pwm.camkes
apps/vm/components/spi/: spi.camkes
apps/vm/components/timer/: timer.camkes
apps/vm/components/uart/: uart.camkes
apps/vm/components/vchan/: vchan.camkes
apps/vm/include/: can_inf.h  spi_inf.h  utils.h
apps/vm/interfaces/: VchanInterface.idl4  can.idl4  clk.idl4  gpio.idl4  pilot.idl4  pwm.idl4  timer.idl4  uart.idl4
apps/vm/linux/: buildroot_tk1_defconfig  linux-dtb  linux-tk1-dtb
apps/x86/cma34cr_centos/: CMakeLists.txt  README.md  app_settings.cmake  cma34cr_centos.camkes
apps/x86/cma34cr_centos/configurations/: cma34cr_centos.h
apps/x86/cma34cr_centos/lwip_include/: lwipopts.h
apps/x86/cma34cr_ubuntu/: CMakeLists.txt  README.md  app_settings.cmake  cma34cr_ubuntu.camkes
apps/x86/minimal/: CMakeLists.txt  app_settings.cmake  minimal.camkes
apps/x86/minimal_64/: CMakeLists.txt  app_settings.cmake  minimal.camkes
apps/x86/optiplex9020/: CMakeLists.txt  app_settings.cmake  optiplex9020.camkes
apps/x86/optiplex9020/src/: cross_vm_connections.c
apps/x86/supermicro/: CMakeLists.txt  README.md  app_settings.cmake  supermicro.camkes
apps/x86/supermicro_wg/: CMakeLists.txt  README.md  app_settings.cmake  supermicro_wg.camkes
apps/x86/virtio_blk_sample/: CMakeLists.txt  app_settings.cmake  virtio_blk_sample.camkes
apps/x86/virtio_guest_driver/: CMakeLists.txt  README.md  app_settings.cmake  virtio_guest_driver.camkes
apps/x86/zmq_samples/: CMakeLists.txt  README.md  app_settings.cmake  zmq_cakeml.camkes  zmq_samples.camkes
cma34cr_ubuntu/: CMakeLists.txt  README.md  app_settings.cmake  cma34cr_ubuntu.camkes
components/VM/: CMakeLists.txt  Kconfig  VM.camkes  VM.mk  vm_common.camkes
components/VM/configurations/: vm.h
components/VM/include/: vmlinux.h
components/VM/src/: cmks_vchan_vm.c  cmks_vchan_vm.h  crossvm.c  exynos5_vmlinux.c  exynos5_vmlinux.h  fdt_manipulation.c  fdt_manipulation.h  main.c  tk1_vmlinux.c  tk1_vmlinux.h  vmlinux.h
minimal/: CMakeLists.txt  app_settings.cmake  minimal.camkes
(+311 files in other folders)
